# Big-Mac-Index

./: main.py  ppp.py  pyproject.toml
templates/: index.html
