[tool.poetry]
name = "infantileappropriatemonad"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Nasdaq-Data-Link = "^1.0.1"
pandas = "^1.4.1"
Flask = "^2.0.3"
pygal = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
